# auth-jwt-simple

./: Cargo.toml  test.rs
sqlx/: lib.rs
sqlx/auth/: check.rs  handlers.rs
sqlx/distribution/: routes_account.rs  routes_index.rs
src/: common.rs  lib.rs  main.rs
src/auth/: accreditation.rs  check.rs  handlers.rs  models.rs  views.rs
src/distribution/: routes_account.rs  routes_assets.rs  routes_index.rs
src/util/: redis_config.rs
static/de_key/user/two@example.com/: SOpPzJq8h4IV.der  jhoT5pjH3O4l.der
static/Новая папка/: 5CEqzjaFl3ff.der
templates/: base.html  i_users.html  index.html  login.html  navbar.html  rq_user.html  signup.html  update.html  user.html  users.html
