[package]
name = "demo"
version = "0.1.0"
edition = "2024"

[dependencies]
jwt-simple = { version = "0.12", default-features = false, features = ["pure-rust"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["multipart", "ws", "original-uri", "macros"] }
axum-extra = { version = "0.12", features = ["typed-header", "form"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "macros", "chrono", "any"] }
tera = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde", "alloc"] }
pbkdf2 = { version = "0.12", features = ["simple"] }
dotenv = "0.15"
rand = "0.10"
tower-http = { version = "0.6", features = ["fs", "trace"] }
tower = { version = "0.5", features = ["filter"] }
